# PQC_Crypto

./: .gitignore
PQC_FALCON/: README.md
PQC_FALCON/core/common/: falcon_params.c  fpr.h  nist.c  shake.c
PQC_FALCON/include/: api.h  falcon_params.h
PQC_FALCON/platform/pc/: Makefile  kat_runtime  kat_runtime.c  operator_interface.h  randombytes.c  test_falcon  test_falcon.c
PQC_FALCON/platform/pc/kat/: falcon512.rsp
PQC_FALCON/platform/pc/soft/: sha256.c
PQC_FRODOKEM/: README.md
PQC_FRODOKEM/core/: api.c
PQC_FRODOKEM/core/common/: config.h  fips202.c  fips202.h  frodo_macrify.h  frodo_macrify_reference.c  frodokem_params.c  kem.c  kem_ref.c  level_namespace.h  noise.c  param.h  parameters.h  random.c
PQC_FRODOKEM/core/frodo1344/: efrodo1344.c  level.h  parameters.h
PQC_FRODOKEM/core/frodo640/: efrodo640.c  level.h  parameters.h
PQC_FRODOKEM/core/frodo976/: efrodo976.c  level.h  parameters.h
PQC_FRODOKEM/include/: api.h  frodokem_params.h
PQC_FRODOKEM/platform/pc/: CMakeLists.txt  Makefile  hash_operator.h  kat_runtime  operator_interface.h  test_frodokem_ref
PQC_FRODOKEM/platform/pc/soft/: sm3.h
PQC_FRODOKEM/platform/pc/test/: kat_runtime.c  tests_main.c
PQC_FRODOKEM/tests/: rng.h  test_KEM1344.c  test_KEM640.c  test_KEM976.c  test_kem.c
PQC_HQC/: README.md
PQC_HQC/core/: api.c
PQC_HQC/core/common/: code.c  code.h  data_structures.h  fft.c  fft.h  fips202.c  fips202.h  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  hqc_log.h  hqc_params.c  kem.c  level_namespace.h  parameters.h  params_common.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  runtime_params.h  symmetric.c  symmetric.h  vector.c  vector.h
PQC_HQC/core/hqc1/: level.h  parameters.h
PQC_HQC/core/hqc3/: level.h  parameters.h
PQC_HQC/core/hqc5/: level.h  parameters.h
PQC_HQC/include/: api.h  hqc_params.h
PQC_HQC/platform/pc/: CMakeLists.txt  Makefile  kat_runtime  operator_interface.h  test_hqc_ref
PQC_HQC/platform/pc/soft/: endian.c  op_fpr.c  op_hash.c  op_trng.c  sha256.h  sm3.c
PQC_HQC/platform/pc/test/: kat_runtime.c  munit_utils.h  test_kem_ref.c  test_pke.c  tests_main.c
PQC_SCLOUDPLUS/: README.md
PQC_SCLOUDPLUS/core/: api.c
PQC_SCLOUDPLUS/core/common/: aes_c.c  config.h  encode.c  encode.h  fips202.c  fips202.h  kem.c  kem.h  level_namespace.h  matrix.c  matrix.h  param.h  parameters.h  pke.c  pke.h  random.c  sample.c  sample.h  scloudplus_params.c  util.h
PQC_SCLOUDPLUS/core/scloudplus128/: level.h  parameters.h
PQC_SCLOUDPLUS/core/scloudplus192/: level.h  parameters.h
PQC_SCLOUDPLUS/core/scloudplus256/: level.h  parameters.h
PQC_SCLOUDPLUS/include/: api.h  scloudplus_params.h
PQC_SCLOUDPLUS/platform/pc/: CMakeLists.txt  Makefile  operator_interface.h  test_scloudplus_ref
PQC_SCLOUDPLUS/platform/pc/soft/: endian.h  op_hash.c  op_matrix.c
PQC_SCLOUDPLUS/platform/pc/test/: kat_driver.c  kat_random.c  run_scloudplus_diff_kat.sh  tests_main.c
PQC_SCLOUDPLUS/platform/pc/test/kat_build/: modified_128.rsp  modified_192.rsp  modified_256.rsp  scloudplus_modified  scloudplus_original_128  scloudplus_original_192  scloudplus_original_256
PQC_SCLOUDPLUS/platform/pc/test/kat_build/PQCDevKitAPI/: operator_interface.h
